# perf-meters

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  foo  run.bat
src/: config.rs  lib.rs  stats.rs
