# Cargo.toml

[package]
name = "perf_meters"
version = "0.2.0"
edition = "2021"
resolver = "2"


[dependencies]
anyhow = "1.0"
console = "0.15"
conv = "0.3"
env_logger = "0.11"
log = "0.4"
serialport = "4.3"
structopt = "0.3"
sysinfo = "0.30"
time = "0.3"


[build-dependencies]
build-data = "0.1"


[profile.release]
codegen-units = 1
lto = "fat"
debug = 0
opt-level = 3

# EOF
