# Cargo.toml

[package]
name = "perf_meters"
version = "1.3.0"
edition = "2024"
resolver = "2"


[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0"
conv = "0"
serialport = "4"
sysinfo = "0"
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"


[build-dependencies]
anyhow = "1"
build-data = "0"


[profile.release]
codegen-units = 1
lto = "fat"
debug = 0
opt-level = 3

# EOF
